@@ -57,9 +57,12 @@ portal = context.getPortalObject()\n
 \n
 person = context.getDestinationDecisionValue(portal_type="Person")\n
 reference = person.getReference()\n
-message_reference = portal.portal_preferences.getPreferredCredentialPasswordRecoveryMessageReference()\n
-if message_reference is None:\n
-  raise ValueError, "Preference not configured"\n
+if context.hasDocumentReference():\n
+  message_reference = context.getDocumentReference()\n
+else:\n
+  message_reference = portal.portal_preferences.getPreferredCredentialPasswordRecoveryMessageReference()\n
+  if message_reference is None:\n
+    raise ValueError, "Preference not configured"\n
 notification_message = portal.NotificationTool_getDocumentValue(message_reference,\n
                                                                 context.getLanguage())\n
 \n
