@@ -103,6 +103,7 @@
                         <string>my_default_credential_question_answer</string>
                         <string>my_destination_decision_title_list</string>
                         <string>my_url_string</string>
+                        <string>my_document_reference</string>
                       </list>
                     </value>
                 </item>
